// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Timeline Event matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="nhsuk-timeline__event nhsuk-u-margin-bottom-2"
      >
        <h2
          class="nhsuk-timeline__title"
        >
          <span
            class="nhsuk-timeline__status"
          >
            Result sent
          </span>
          <span
            class="nhsuk-timeline__by"
          >
             by 
            System
          </span>
          <span
            class="nhsuk-timeline__action"
          >
            <span
              class="nhsuk-timeline__action"
            >
              -
              <span
                class="nhsuk-tag nhsuk-tag--yellow nhsuk-timeline__tag"
              >
                Send to printer
              </span>
              <a
                class="nhsuk-timeline__link"
                href="/placeholder/"
              >
                Cancel
              </a>
            </span>
          </span>
        </h2>
        <p
          class="nhsuk-timeline__date"
        >
          <time
            datetime="19 Nov 2019, 7:49:10 pm"
          >
            19 Nov 2019, 7:49:10 pm
          </time>
        </p>
        <p
          class="nhsuk-timeline__description-item"
        >
          Test Result: (39S) Low-grade dyskaryosis, HPV positive, Repeat Advised
        </p>
        <p
          class="nhsuk-timeline__description-item"
        >
          Test Date: 19-Oct-2020, 9:00:00 am
        </p>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="nhsuk-timeline__event nhsuk-u-margin-bottom-2"
    >
      <h2
        class="nhsuk-timeline__title"
      >
        <span
          class="nhsuk-timeline__status"
        >
          Result sent
        </span>
        <span
          class="nhsuk-timeline__by"
        >
           by 
          System
        </span>
        <span
          class="nhsuk-timeline__action"
        >
          <span
            class="nhsuk-timeline__action"
          >
            -
            <span
              class="nhsuk-tag nhsuk-tag--yellow nhsuk-timeline__tag"
            >
              Send to printer
            </span>
            <a
              class="nhsuk-timeline__link"
              href="/placeholder/"
            >
              Cancel
            </a>
          </span>
        </span>
      </h2>
      <p
        class="nhsuk-timeline__date"
      >
        <time
          datetime="19 Nov 2019, 7:49:10 pm"
        >
          19 Nov 2019, 7:49:10 pm
        </time>
      </p>
      <p
        class="nhsuk-timeline__description-item"
      >
        Test Result: (39S) Low-grade dyskaryosis, HPV positive, Repeat Advised
      </p>
      <p
        class="nhsuk-timeline__description-item"
      >
        Test Date: 19-Oct-2020, 9:00:00 am
      </p>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Timeline matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="nhsuk-timeline"
      >
        <div
          class="nhsuk-timeline__event nhsuk-u-margin-bottom-2"
        >
          <h2
            class="nhsuk-timeline__title"
          >
            <span
              class="nhsuk-timeline__status"
            >
              Result sent
            </span>
            <span
              class="nhsuk-timeline__by"
            >
               by 
              System
            </span>
            <span
              class="nhsuk-timeline__action"
            >
              <span
                class="nhsuk-timeline__action"
              >
                -
                <span
                  class="nhsuk-tag nhsuk-tag--yellow nhsuk-timeline__tag"
                >
                  Send to printer
                </span>
                <a
                  class="nhsuk-timeline__link"
                  href="/placeholder/"
                >
                  Cancel
                </a>
              </span>
            </span>
          </h2>
          <p
            class="nhsuk-timeline__date"
          >
            <time
              datetime="19 Nov 2019, 7:49:10 pm"
            >
              19 Nov 2019, 7:49:10 pm
            </time>
          </p>
          <p
            class="nhsuk-timeline__description-item"
          >
            Test Result: (39S) Low-grade dyskaryosis, HPV positive, Repeat Advised
          </p>
          <p
            class="nhsuk-timeline__description-item"
          >
            Test Date: 19-Oct-2020, 9:00:00 am
          </p>
        </div>
        <div
          class="nhsuk-timeline__event nhsuk-u-margin-bottom-2"
        >
          <h2
            class="nhsuk-timeline__title"
          >
            <span
              class="nhsuk-timeline__status"
            >
              Patient deferred
            </span>
          </h2>
          <p
            class="nhsuk-timeline__date"
          >
            <time
              datetime="19 Nov 2019, 4:28:57 pm"
            >
              19 Nov 2019, 4:28:57 pm
            </time>
          </p>
          <p
            class="nhsuk-timeline__description-item"
          >
            Defer Reason: Pregnancy
          </p>
          <p
            class="nhsuk-timeline__description-item"
          >
            CRM Case Number: CAS-12345-ABCDE
          </p>
          <p
            class="nhsuk-timeline__description-item"
          >
            Comments: Requested via the GP form
          </p>
        </div>
        <div
          class="nhsuk-timeline__event nhsuk-u-margin-bottom-2"
        >
          <h2
            class="nhsuk-timeline__title"
          >
            <span
              class="nhsuk-timeline__status"
            >
              Screening invitation sent
            </span>
            <span
              class="nhsuk-timeline__by"
            >
               by 
              System
            </span>
            <span
              class="nhsuk-timeline__action"
            >
              <span
                class="nhsuk-timeline__action"
              >
                -
                <span
                  class="nhsuk-tag nhsuk-tag--grey nhsuk-timeline__tag"
                >
                  Sent to patient
                </span>
                <a
                  class="nhsuk-timeline__link"
                  href="/placeholder2"
                >
                  Resend
                </a>
              </span>
            </span>
          </h2>
          <p
            class="nhsuk-timeline__date"
          >
            <time
              datetime="18 Nov 2019, 7:49:10 pm"
            >
              18 Nov 2019, 7:49:10 pm
            </time>
          </p>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="nhsuk-timeline"
    >
      <div
        class="nhsuk-timeline__event nhsuk-u-margin-bottom-2"
      >
        <h2
          class="nhsuk-timeline__title"
        >
          <span
            class="nhsuk-timeline__status"
          >
            Result sent
          </span>
          <span
            class="nhsuk-timeline__by"
          >
             by 
            System
          </span>
          <span
            class="nhsuk-timeline__action"
          >
            <span
              class="nhsuk-timeline__action"
            >
              -
              <span
                class="nhsuk-tag nhsuk-tag--yellow nhsuk-timeline__tag"
              >
                Send to printer
              </span>
              <a
                class="nhsuk-timeline__link"
                href="/placeholder/"
              >
                Cancel
              </a>
            </span>
          </span>
        </h2>
        <p
          class="nhsuk-timeline__date"
        >
          <time
            datetime="19 Nov 2019, 7:49:10 pm"
          >
            19 Nov 2019, 7:49:10 pm
          </time>
        </p>
        <p
          class="nhsuk-timeline__description-item"
        >
          Test Result: (39S) Low-grade dyskaryosis, HPV positive, Repeat Advised
        </p>
        <p
          class="nhsuk-timeline__description-item"
        >
          Test Date: 19-Oct-2020, 9:00:00 am
        </p>
      </div>
      <div
        class="nhsuk-timeline__event nhsuk-u-margin-bottom-2"
      >
        <h2
          class="nhsuk-timeline__title"
        >
          <span
            class="nhsuk-timeline__status"
          >
            Patient deferred
          </span>
        </h2>
        <p
          class="nhsuk-timeline__date"
        >
          <time
            datetime="19 Nov 2019, 4:28:57 pm"
          >
            19 Nov 2019, 4:28:57 pm
          </time>
        </p>
        <p
          class="nhsuk-timeline__description-item"
        >
          Defer Reason: Pregnancy
        </p>
        <p
          class="nhsuk-timeline__description-item"
        >
          CRM Case Number: CAS-12345-ABCDE
        </p>
        <p
          class="nhsuk-timeline__description-item"
        >
          Comments: Requested via the GP form
        </p>
      </div>
      <div
        class="nhsuk-timeline__event nhsuk-u-margin-bottom-2"
      >
        <h2
          class="nhsuk-timeline__title"
        >
          <span
            class="nhsuk-timeline__status"
          >
            Screening invitation sent
          </span>
          <span
            class="nhsuk-timeline__by"
          >
             by 
            System
          </span>
          <span
            class="nhsuk-timeline__action"
          >
            <span
              class="nhsuk-timeline__action"
            >
              -
              <span
                class="nhsuk-tag nhsuk-tag--grey nhsuk-timeline__tag"
              >
                Sent to patient
              </span>
              <a
                class="nhsuk-timeline__link"
                href="/placeholder2"
              >
                Resend
              </a>
            </span>
          </span>
        </h2>
        <p
          class="nhsuk-timeline__date"
        >
          <time
            datetime="18 Nov 2019, 7:49:10 pm"
          >
            18 Nov 2019, 7:49:10 pm
          </time>
        </p>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
